--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "next": "15.0.3",
     "react": "19.0.0-rc-66855b96-20241106",
     "react-dom": "19.0.0-rc-66855b96-20241106",
+    "react-router-dom": "^7.0.1",
     "zustand": "^5.0.1"
   },
   "devDependencies": {
