--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@tanstack/react-query": "4",
     "@tanstack/react-query-devtools": "^5.61.5",
+    "@tanstack/react-table": "^8.20.5",
     "axios": "^1.7.8",
     "next": "15.0.3",
     "react": "19.0.0-rc-66855b96-20241106",
