--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
     "@tanstack/react-query-devtools": "^5.61.5",
     "@tanstack/react-table": "^8.20.5",
     "axios": "^1.7.8",
+    "chart.js": "^4.4.7",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lodash": "^4.17.21",
     "lucide-react": "^0.462.0",
     "next": "15.0.3",
     "react": "19.0.0-rc-66855b96-20241106",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "19.0.0-rc-66855b96-20241106",
     "react-router-dom": "^7.0.1",
     "tailwind-merge": "^2.5.5",
