--- a/package.json
+++ b/package.json
@@ -18,12 +18,15 @@
     "chart.js": "^4.4.7",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "d3-format": "^3.1.0",
+    "d3-time-format": "^4.1.0",
     "lodash": "^4.17.21",
     "lucide-react": "^0.462.0",
     "next": "15.0.3",
     "react": "19.0.0-rc-66855b96-20241106",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "19.0.0-rc-66855b96-20241106",
+    "react-financial-charts": "^2.0.1",
     "react-router-dom": "^7.0.1",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
@@ -31,6 +34,8 @@
   },
   "devDependencies": {
     "@svgr/webpack": "^8.1.0",
+    "@types/d3-format": "^3.0.4",
+    "@types/d3-time-format": "^4.0.3",
     "@types/lodash": "^4.17.13",
     "@types/node": "^20",
     "@types/react": "^18",
