--- a/package.json
+++ b/package.json
@@ -6,9 +6,12 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "generate": "drizzle-kit generate",
+    "migrate": "drizzle-kit migrate"
   },
   "dependencies": {
+    "@neondatabase/serverless": "^0.10.4",
     "@radix-ui/react-select": "^2.1.2",
     "@radix-ui/react-slot": "^1.1.0",
     "@tanstack/react-query": "4",
@@ -20,6 +23,8 @@
     "clsx": "^2.1.1",
     "d3-format": "^3.1.0",
     "d3-time-format": "^4.1.0",
+    "dotenv": "^16.4.7",
+    "drizzle-orm": "^0.37.0",
     "lodash": "^4.17.21",
     "lucide-react": "^0.462.0",
     "next": "15.0.3",
@@ -40,10 +45,12 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "drizzle-kit": "^0.29.1",
     "eslint": "^8",
     "eslint-config-next": "15.0.3",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
+    "tsx": "^4.19.2",
     "typescript": "^5"
   }
 }
