--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "d3-time-format": "^4.1.0",
     "dotenv": "^16.4.7",
     "drizzle-orm": "^0.37.0",
+    "jose": "^5.9.6",
     "lodash": "^4.17.21",
     "lucide-react": "^0.462.0",
     "next": "15.0.3",
