--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,6 +1,9 @@
 {
   "rules": {
-    "@typescript-eslint/no-explicit-any": "off"
+    "no-unused-vars": "off",
+    "@typescript-eslint/no-explicit-any": "off",
+    "@typescript-eslint/no-unused-vars": "off",
+    "@typescript-eslint/no-unused-expressions": "off"
   },
   "extends": ["next/core-web-vitals", "next/typescript"]
 }
