--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-chartjs-2": "^5.2.0",
     "react-dom": "18.3.1",
     "react-financial-charts": "^2.0.1",
+    "react-hook-form": "^7.54.1",
     "react-hot-toast": "^2.4.1",
     "react-router-dom": "^7.0.1",
     "tailwind-merge": "^2.5.5",
