--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "lodash": "^4.17.21",
     "lucide-react": "^0.462.0",
     "next": "15.0.3",
+    "next-sitemap": "^4.2.3",
     "react": "18.3.1",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "18.3.1",
